force-app/main/default/objects/Breed__c/Breed__c.object-meta.xml
<CustomObject>
    <label>Breed</label>
    <nameField>
        <label>Breed Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Breeds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>