force-app/main/default/objects/Breed__c/fields/Barking_Level__c.field-meta.xml
<CustomField>
    <fullName>Barking_Level__c</fullName>
    <label>Barking Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Only To Alert</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Very Vocal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>