force-app/main/default/objects/Breed__c/fields/Coat_Length__c.field-meta.xml
<CustomField>
    <fullName>Coat_Length__c</fullName>
    <label>Coat Length</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Short</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Long</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>