force-app/main/default/objects/Breed__c/fields/Coat_Type__c.field-meta.xml
<CustomField>
    <fullName>Coat_Type__c</fullName>
    <label>Coat Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wiry</fullName>
            </value>
            <value>
                <fullName>Rough</fullName>
            </value>
            <value>
                <fullName>Curly</fullName>
            </value>
            <value>
                <fullName>Hairless</fullName>
            </value>
            <value>
                <fullName>Corded</fullName>
            </value>
            <value>
                <fullName>Wavy</fullName>
            </value>
            <value>
                <fullName>Smooth</fullName>
            </value>
            <value>
                <fullName>Double</fullName>
            </value>
            <value>
                <fullName>Silky</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>