force-app/main/default/objects/Breed__c/fields/Energy_Level__c.field-meta.xml
<CustomField>
    <fullName>Energy_Level__c</fullName>
    <label>Energy Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Couch Potato</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High Energy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>