force-app/main/default/objects/Breed__c/fields/Good_With_Kids__c.field-meta.xml
<CustomField>
    <fullName>Good_With_Kids__c</fullName>
    <label>Good With Children</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Recommended</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Good With Children</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>