force-app/main/default/objects/Breed__c/fields/Life_Expectancy__c.field-meta.xml
<CustomField>
    <fullName>Life_Expectancy__c</fullName>
    <label>Life Expectancy</label>
    <length>15</length>
    <type>Text</type>
</CustomField>