force-app/main/default/objects/Breed__c/fields/Trainability_Level__c.field-meta.xml
<CustomField>
    <fullName>Trainability_Level__c</fullName>
    <label>Trainability Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self-Willed</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Eager To Please</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>